Bug 1952756 - Workaround gtk3-nocsd. r=stransky

Use our internal state to determine whether we know we're undecorated,
since gtk3 with gtk3-nocsd hooked in will misreport it.

This does really suck, that said.

Differential Revision: https://phabricator.services.mozilla.com/D241257